--- a/cube.css
+++ b/cube.css
@@ -1,65 +1,31 @@
-.cube{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    width: 150px;
-    height: 150px;
-    display: block;
-    position: relative;
-    z-index: 0;
-    top: 0;
-    left: 0;
 
-    transition: transform 2s;
-    transform-style: preserve-3d;
-}
-.cube *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+.cube, .cube > div{
+  transition-duration: 3s;
+  transition-property: width, height, transform;
 }
 
-.cube.face{
-    transform: rotateY(20deg) rotateX(20deg);
-}
-.cube.back{
-    transform: rotateY(160deg) rotateX(160deg);
 
-}
 
-.cube > *{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-
-    --t: 200px;
-    opacity: 0.8;
-    
+.cube > div{
+  opacity: 1;
+  overflow: hidden;
+  font-size: 30px;
 }
-
-.cube .front{
-    transform: translateZ(calc(var(--t)/2));
+.cube_front{
+  background-color: rgb(0, 204, 255);
 }
-.cube .back{
-    transform: translateZ(calc(-1*var(--t)/2)) rotateY(180deg);
+.cube_back{
+  background-color: rgba(134, 18, 155);
 }
-.cube .top{
-    transform: rotateX(-90deg) translateZ( calc(-1*var(--t)/2));
-    height: var(--t);
+.cube_left{
+  background-color: rgb(46, 124, 160);
 }
-.cube .bottom{
-    top: 100%;
-    transform: rotateX(-90deg) translateZ( calc(-1*var(--t)/2));
-    height: var(--t);
+.cube_right{
+  background-color: rgb(185, 214, 22);
 }
-.cube .left{
-    transform: rotateY(-90deg) translateZ( calc(var(--t)/2));
-    width: var(--t);
+.cube_top{
+  background-color: rgb(177, 11, 108);
 }
-.cube .rigth{
-    transform: rotateY(-90deg) translateZ( calc(var(--t)/2));
-    width: var(--t);
-    left: 100%;
+.cube_bottom{
+  background-color: rgb(217, 255, 0);
 }
